feat: shutdown hook and stopping reason